# rs-mailer

./: Cargo.toml  README.md
schema/: schema.json
src/: config.rs  main.rs  transporter.rs
