[package]
name = "rs-sendmail"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
jsonschema = "0.30.0"
lettre = { version = "0.11.16", default-features = false, features = ["hostname", "builder", "hostname", "smtp-transport", "pool", "rustls-tls"] }
rustls = "0.23.27"
serde = "1.0.219"
serde_json = "1.0.140"
