[package]
name = "rs-sendmail"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
jsonschema = "0.30.0"
lettre = { version = "0.11.16", default-features = false, features = ["hostname", "builder", "hostname", "smtp-transport", "pool", "rustls-tls"] }
rustls = "0.23.27"
serde = "1.0.219"
serde_json = "1.0.140"

[profile.release]
opt-level = "s"       # サイズと速度のバランスを取る最適化
lto = "fat"           # 最大限のリンク時最適化を有効化
codegen-units = 1     # コード生成ユニットを減らし、最適化を強化
panic = "abort"       # panic 時に 'unwind' ではなく 'abort' を使用
strip = "symbols"     # シンボル情報を削除し、必要なデバッグ情報は保持
